# bitfinex-maker-kit

./: .env.testing  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BFXCLI.py  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_TESTING_SUMMARY.md  Makefile  PAPER_TRADING_SETUP.md  PYPI_FIX.md  README.md  RELEASE_SETUP.md  SAFETY_IMPLEMENTATION.md  THIRD_PARTY_LICENSES.md  TRADING_SAFETY.md  pyproject.toml  pytest.ini  requirements.txt  tox.ini
.claude/agents/: code-quality-devops.md
.cursor/rules/: 750LoC.mdc  kiss.mdc  portable.mdc
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  comprehensive-testing.yml  develop.yml  enforce-branch-flow.yml  performance-monitoring.yml  publish.yml  release.yml  semantic-release.yml  version-bump.yml  version-bump.yml.deprecated
bitfinex_maker_kit/: __init__.py  bitfinex_client.py
bitfinex_maker_kit/cli/: __init__.py  argument_parser.py  command_router.py
bitfinex_maker_kit/commands/: __init__.py  auto_market_make.py  cancel.py  clear.py  fill_spread.py  list.py  market_make.py  monitor.py  monitor_display.py  monitor_ui.py  monitor_websocket.py  put.py  test.py  update.py  wallet.py
bitfinex_maker_kit/config/: environment.py  trading_config.py
bitfinex_maker_kit/core/: api_client.py  order_fetcher.py  order_manager.py  order_update_service.py  order_validator.py  trading_facade.py  types.py
bitfinex_maker_kit/domain/: amount.py  order_id.py  price.py  symbol.py
bitfinex_maker_kit/services/: async_trading_service.py  batch_request_service.py  cache_service.py  container.py  market_data_service.py  monitored_trading_service.py  performance_monitor.py  sync_trading_facade.py  trading_service.py
bitfinex_maker_kit/strategies/: order_generator.py
bitfinex_maker_kit/ui/: market_maker_console.py
bitfinex_maker_kit/update_strategies/: base.py  cancel_recreate_strategy.py  strategy_factory.py  websocket_strategy.py
bitfinex_maker_kit/utilities/: auth.py  client_factory.py  console.py  constants.py  display_helpers.py  formatters.py  market_data.py  market_data_cache.py  order_fetcher.py  orders.py  performance_dashboard.py  profiler.py  response_parser.py  trading_helpers.py  validators.py
bitfinex_maker_kit/websocket/: async_event_loop.py  connection_manager.py  event_handler.py
docs/: BRANCHING_STRATEGY.md  PYPI_PUBLISHING.md  RELEASE_ROLLBACK.md  VERSION_MANAGEMENT.md
maker_kit/: __init__.py  __main__.py  auth.py  auto_market_maker.py  bitfinex_client.py  cli.py  constants.py  market_data.py  market_making.py  orders.py  utils.py  wallet.py
maker_kit/cli/: __init__.py  argument_parser.py  command_router.py
maker_kit/commands/: __init__.py  auto_market_make.py  cancel.py  clear.py  fill_spread.py  list.py  market_make.py  put.py  test.py  update.py  wallet.py
maker_kit/config/: __init__.py  environment.py  trading_config.py
maker_kit/core/: __init__.py  api_client.py  order_fetcher.py  order_manager.py  order_update_service.py  order_validator.py  trading_facade.py
maker_kit/domain/: __init__.py  amount.py  order_id.py  price.py  symbol.py
maker_kit/exchanges/: __init__.py  bitfinex_client.py
maker_kit/ui/: __init__.py  (+1 more)
plans/: code-quality-improvement-plan.md  priority-1-implementation-status.md  priority-2-completion-summary.md  priority-4-completion-summary.md
scripts/: bump_version.py  check.sh  check_performance_regression.py  pre-receive-hook.sh  prepare-release.sh  release.sh  version
tests/: __init__.py  conftest.py  test_cli_commands.py  test_command_coverage.py  test_post_only_enforcement.py  test_python_version_requirement.py  test_wrapper_architecture.py
(+82 files in other folders)
